--- a/athletics_training_app/android/app/src/main/res/drawable/launch_background.xml
+++ b/athletics_training_app/android/app/src/main/res/drawable/launch_background.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
-
-    <!-- You can insert your own image assets here -->
-    <!-- <item>
+    <item android:drawable="@android:color/white" /> <!-- or use your desired background color -->
+    <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+            android:src="@mipmap/ic_launcher" /> <!-- Change this if you want to use a different splash icon -->
+    </item>
 </layer-list>
